@@ -357,3 +357,81 @@ search_tidyup called
 >>>>>>>>>>>>>>>> Exim pid=pppp (main) terminating with rc=0 >>>>>>>>>>>>>>>>
 search_tidyup called
 >>>>>>>>>>>>>>>> Exim pid=pppp (main) terminating with rc=0 >>>>>>>>>>>>>>>>
+Exim version x.yz ....
+changed uid/gid: forcing real = effective
+  uid=uuuu gid=CALLER_GID pid=pppp
+configuration file is TESTSUITE/test-config
+admin user
+changed uid/gid: privilege not needed
+  uid=EXIM_UID gid=EXIM_GID pid=pppp
+seeking password data for user "CALLER": cache not available
+getpwnam() succeeded uid=CALLER_UID gid=CALLER_GID
+DSN: r0f propagating DSN
+DSN: r00 propagating DSN
+DSN: r01 propagating DSN
+DSN: r02 propagating DSN
+DSN: r03 propagating DSN
+DSN: r04 propagating DSN
+DSN: r05 propagating DSN
+DSN: r1 propagating DSN
+DSN: r2 propagating DSN
+DSN: r3 propagating DSN
+originator: uid=CALLER_UID gid=CALLER_GID login=CALLER name=CALLER_NAME
+sender address = CALLER@test.ex
+sender_fullhost = [127.0.0.1]
+sender_rcvhost = [127.0.0.1]
+host in hosts_connection_nolog? no (option unset)
+LOG: smtp_connection MAIN
+  SMTP connection from [127.0.0.1]
+host in host_lookup? no (option unset)
+set_process_info: pppp handling incoming connection from [127.0.0.1]
+host in host_reject_connection? no (option unset)
+host in sender_unqualified_hosts? no (option unset)
+host in recipient_unqualified_hosts? no (option unset)
+host in helo_verify_hosts? no (option unset)
+host in helo_try_verify_hosts? no (option unset)
+host in helo_accept_junk_hosts? no (option unset)
+SMTP>> 220 myhost.test.ex ESMTP Exim x.yz Tue, 2 Mar 1999 09:44:33 +0000
+smtp_setup_msg entered
+SMTP<< HELO test
+test in helo_lookup_domains? no (end of list)
+sender_fullhost = (test) [127.0.0.1]
+sender_rcvhost = [127.0.0.1] (helo=test)
+set_process_info: pppp handling incoming connection from (test) [127.0.0.1]
+SMTP>> 250 myhost.test.ex Hello test [127.0.0.1]
+SMTP<< MAIL FROM:<test@test.ex>
+spool directory space = nnnnnK inodes = nnnnn check_space = 10240K inodes = 100 msg_size = 0
+log directory space = nnnnnK inodes = nnnnn check_space = 10240K inodes = 100
+SMTP>> 250 OK
+SMTP<< RCPT TO:<error@test.ex>
+test.ex in "! *.ex"? no (matched "! *.ex")
+test.ex in "test.ex"? yes (matched "test.ex")
+test.ex in percent_hack_domains? yes (matched "+not_queue_domains")
+processing "accept"
+check verify = recipient
+>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>
+Verifying error@test.ex
+>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>
+Considering error@test.ex
+cached no match for +hold_domains
+cached yes match for +not_queue_domains
+test.ex in percent_hack_domains? yes (matched "+not_queue_domains" - cached)
+>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>
+routing error@test.ex
+--------> r0f router <--------
+local_part=error domain=test.ex
+checking domains
+LOG: MAIN PANIC
+  unknown named domain list "+no_such_list"
+domains check lookup or other defer
+----------- end verify ------------
+accept: condition test deferred in inline ACL
+SMTP>> 451 Temporary local problem - please try later
+LOG: MAIN REJECT
+  H=(test) [127.0.0.1] F=<test@test.ex> temporarily rejected RCPT <error@test.ex>: domains check lookup or other defer
+SMTP<< QUIT
+SMTP>> 221 myhost.test.ex closing connection
+LOG: smtp_connection MAIN
+  SMTP connection from (test) [127.0.0.1] closed by QUIT
+search_tidyup called
+>>>>>>>>>>>>>>>> Exim pid=pppp (main) terminating with rc=0 >>>>>>>>>>>>>>>>
