@@ -1,2 +1,12 @@
 userx@test.ex
   router = r3, transport = t1
+
+**** SMTP testing session as if from host 127.0.0.1
+**** but without any ident (RFC 1413) callback.
+**** This is not for real!
+
+220 myhost.test.ex ESMTP Exim x.yz Tue, 2 Mar 1999 09:44:33 +0000
+250 myhost.test.ex Hello test [127.0.0.1]
+250 OK
+451 Temporary local problem - please try later
+221 myhost.test.ex closing connection
